--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -3,6 +3,7 @@
 \usepackage{indentfirst}
 \usepackage{babel}
 \usepackage{float}
+\restylefloat{table}
 \setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{3}
 
