--- a/thesis/tex/used-software.tex
+++ b/thesis/tex/used-software.tex
@@ -13,7 +13,7 @@ Na początku Eclipse było znane jako czysta platforma, dziś jest to zaawansowa
 
 \subsection{Platforma}
 \label{subsec:platforma}
-Program Eclipse zbudowany jest w języku \emph{Java}, wymaga więc zainstalowanej Javy na komputerze użytkownika.  Całe środowisko składa się osobnych wtyczek współpracyjących ze sobą, oraz rdzenia samego programu (ang. \emph{Eclipse kernel}). Wtyczka to plik \emph{JAR} z manifestem, określającym zachowanie i przeznaczenie modułu. W manifestach zawierane są również informacje na temat zależności między wtyczkami, a także informacje, jakie moduły eclipse będą zawarte we wtyczce \ref{eclipse_example}.
+Program Eclipse zbudowany jest w języku \emph{Java}, wymaga więc zainstalowanej Javy na komputerze użytkownika.  Całe środowisko składa się osobnych wtyczek współpracyjących ze sobą, oraz rdzenia samego programu (ang. \emph{Eclipse kernel}). Wtyczka to plik \emph{JAR} z manifestem, określającym zachowanie i przeznaczenie modułu. W manifestach zawierane są również informacje na temat zależności między wtyczkami, a także informacje, jakie moduły eclipse będą zawarte we wtyczce (rys. \ref{eclipse_example}).
 \begin{figure}[h]
   \centering
     \includegraphics[width=\textwidth]{img/eclipse-example.png}
@@ -21,13 +21,13 @@ Program Eclipse zbudowany jest w języku \emph{Java}, wymaga więc zainstalowane
     \label{eclipse_example}
 \end{figure}
 
-By zachęcić twórców do rozwijania środowiska Eclipse, wymyślono tzw. \emph{Extension Points}. Extension Points to instrukcje informujące Eclipse, jakich klas użyć do rozszerzenia elementów takich jak okna, menu kontekstowe, kreatory. Korzystając z tych punktów można domyślne elementy podmienić własnymi, bardziej rozbudowanymi modułami. Dzięki takiemu rozwiązaniu, rdzenną aplikację można niemal w nieograniczony sposób dostosować do swoich potrzeb.\ref{ana_structure}\JP{$\leftarrow$ A to co? Numer rysunku nie może sobie tak samotnie wisieć. Nie mówiąc o tym, że tu chyba powinno być 4.1, a nie 6.12?}
+By zachęcić twórców do rozwijania środowiska Eclipse, wymyślono tzw. \emph{Extension Points}. Extension Points to instrukcje informujące Eclipse, jakich klas użyć do rozszerzenia elementów takich jak okna, menu kontekstowe, kreatory. Korzystając z tych punktów można domyślne elementy podmienić własnymi, bardziej rozbudowanymi modułami. Dzięki takiemu rozwiązaniu, rdzenną aplikację można niemal w nieograniczony sposób dostosować do swoich potrzeb (rys. \ref{eclipse_custom}).
 
 \begin{figure}[h]
   \centering
-    \includegraphics[width=\textwidth]{img/custom-window.png}
+    \includegraphics[width=8cm]{img/custom-window.png}
     \caption{Dodatkowa zakładka Plan Browser}
-    \label{ana_structure}
+    \label{eclipse_custom}
 \end{figure}
 
 Dobrym przykładem jest tutaj całkiem popularne środowisko deweloperskie \emph{Aptana Studio}. Aplikacja ta została zbudowana całkowicie na rdzeniu Eclipse, można więc zauwazyć pewne podobieństwa w układzie okien, modułowości. Mimo podobieństw jest jednak zupełnie inna, ukierunkowana na programowanie aplikacji internetowych. Nie wszyscy twórcy potrzebują jednak tworzyć całkowicie odrębne oprogramowanie. Eclipse SDK przychodzi z szeregiem domyślnych modułów, takich jak edytory tekstu, paski narzędzi oraz okna kontekstowe. Każdy z tych modułów może zostać zastąpiony własnym lub rozszerzony o pewne funkcjonalności.
