dodana jedna pozycja

--- a/thesis/tex/bibliography.tex
+++ b/thesis/tex/bibliography.tex
@@ -15,14 +15,17 @@ http://ti.arc.nasa.gov/m/pub-archive/313h/0313\%20\%28Frank\%29.pdf [Dostęp: 18
 \bibitem{adl} Gelfond M., Lifschitz V., \emph{Action Languages} Linköping Electronic Articles in
 Computer and Information Science
 Vol. 3(1998): nr 16. Dostępne w http://citeseerx.ist.psu.edu/viewdoc/download?doi= 10.1.1.146.4665\&{}rep=rep1\&{}type=pdf [Dostęp 15.01.2014]
+\bibitem{lpg} Gerevini A., Serina I., \emph{LPG: a Planner based on Local Search for Planning Graphs}, Proceedings of the Sixth International Conference on Artificial Intelligence Planning and Scheduling (AIPS'02), AAAI Press, Toulouse, France, 2002.
 \bibitem{pddl} Ghallab M. et al., \emph{PDDL -- The Planning Domain Definition Language. Version 1.2}.
 AIPS Conference, 1998.
+\bibitem{klocki}Gupta N.,  Nau D. S., \emph{On the complexity of blocks-world planning.} Artificial Intelligence 56.2 (1992): 223-254
 \bibitem{fdalgorytm} Helmert M., \emph{The Fast Downward Planning System}. Journal of Artifcial Intelligence Research 26 (2006), str. 191-246. Dostępne w: https://www.jair.org/media/1705/live-1705-2731-jair.pdf [Dostęp: 18.01.2014]
 \bibitem{satplan} Kautz H., \emph{SATPLAN04: Planning as Satisfiability.} 1992. Dostępne w:
 http://www.tzi.de/~edelkamp/ipc-4/Proc/satplan04.pdf [Dostęp: 18.01.2014]
 \bibitem{pddl3.1} Kovacs D. L. , \emph{Complete BNF description of PDDL 3.1 (completely corrected).} 2011. Dostępny w: http://www.plg.inf.uc3m.es/ipc2011-deterministic/attachments/OtherContributions/kovacs-pddl-3.1-2011.pdf [Dostęp: 18.01.2014]
 \bibitem{opt} McDermott D., \emph{OPT Manual.} 2005. Dostępny w: http://www.cs.yale.edu/homes/dvm/papers/opt-manual.pdf [Dostęp: 18.01.2014]
 \bibitem{eclipsearticle} Moir K., \emph{The Architecture of Open Source Application}, Dostępne w http://www.aosabook.org/en/eclipse.html [Dostęp: 19.01.2014]
+\bibitem{fastforward} Nebel B. , \emph{The FF Planning System: Fast Plan Generation Through Heuristic Search},  Journal of Artificial Intelligence Research, Volume 14, 2001, Pages 253 - 302.
 \bibitem{antlr}Parr T., \emph{The Definitive ANTLR Reference. Building Domain-Specific Languages}. 
 The Pragmatic Bookshelf, 2007.
 \bibitem{ai} Russell S., Norvig P., \emph{Artificial Intelligence: A
