[247] Chapeter referrence fix

--- a/thesis/tex/implementation.tex
+++ b/thesis/tex/implementation.tex
@@ -32,7 +32,7 @@ Tworzenie pliku i zapisanie do lokalizacji zaimplementowano korzystając kodu ź
 \section{Przetwarzanie kodu PDDL}
 \label{sec:przetwarzanie}
 W specyfikacji wymagań zostały zawarte punkty dotyczące wyświetlania błędów znajdujących 
-się w pliku PDDL (roz. \ref{reqErrorDetection}) oraz prezentowania listy automatycznych\
+się w pliku PDDL (roz. \ref{UCeditor}) oraz prezentowania listy automatycznych\
 podpowiedzi wyrazów (roz. \ref{reqAutocompletion}).
 Obie te fukcje oparte są na informacjach zawartych w kodzie źródłowym i związane
 z jego analizą.
