--- a/thesis/tex/specification.tex
+++ b/thesis/tex/specification.tex
@@ -6,8 +6,7 @@ Założeniem projektu było utworzenie lekkiego i wydajnego nardzędzia do progr
 \subsection{Przypadki użycia}
 \subsubsection{Wspomaganie użytkownika w pracy z edytorem}
 \label{UCeditor}
-\begin{table}[H]
-\centering
+\begin{table}[!htb]
 \begin{tabular}{|p{\textwidth}|}
 \hline 
 \textbf{Przypadek użycia:} Wspomaganie użytkownika w pracy z edytorem\\
@@ -44,8 +43,7 @@ Założeniem projektu było utworzenie lekkiego i wydajnego nardzędzia do progr
 \end{table}
 \subsubsection{Podpowiadanie składni}
 \label{reqAutocompletion}
-\begin{table}[H]
-\centering
+\begin{table}[!htb]
 \begin{tabular}{|p{\textwidth}|}
 \hline 
 \textbf{Przypadek użycia:} Podpowiadanie składni\\
@@ -78,8 +76,7 @@ Założeniem projektu było utworzenie lekkiego i wydajnego nardzędzia do progr
 \end{table}
 \subsubsection{Tworzenie nowego pliku PDDL}
 \label{reqAutocompletion}
-\begin{table}[H]
-\centering
+\begin{table}[!htb]
 \begin{tabular}{|p{\textwidth}|}
 \hline 
 \textbf{Przypadek użycia:} Tworzenie nowego pliku PDDL\\
@@ -110,8 +107,7 @@ Założeniem projektu było utworzenie lekkiego i wydajnego nardzędzia do progr
 \end{table}
 \subsubsection{Instalacja aplikacji przez repozytorium}
 \label{reqAutocompletion}
-\begin{table}[H]
-\centering
+\begin{table}[!htb]
 \begin{tabular}{|p{\textwidth}|}
 \hline 
 \textbf{Przypadek użycia:} Instalacja aplikacji przez repozytorium\\
