[247] minor spelling mistakes fixed

--- a/thesis/tex/implementation.tex
+++ b/thesis/tex/implementation.tex
@@ -84,7 +84,7 @@ są \textbf{:strips}, \textbf{:typing}, \textbf{:disjunctive-preconditions}, \te
 \textbf{:conditional-effects}, \textbf{:fluents}, \textbf{:adl}.
 \end{sloppypar}
 
-\subsection{Analizator leksykaly i składniowy}
+\subsection{Analizator leksykalny i składniowy}
 Analizator leksykalny i składniowy są automatycznie generowane przez narzędzie ANTLR
 na podstawie gramatyki. 
 
