--- a/thesis/tex/implementation.tex
+++ b/thesis/tex/implementation.tex
@@ -439,7 +439,7 @@ gdzie:
 \item \textbf{\texttt{<ścieżka\_do\_problemu>}} ścieżka do pliku problemu, zdefiniowanego na dziedzinie wskazanej w podanym jako pierwszy argument pliku dziedziny;
 \item \textbf{\texttt{<argumenty\_planowania>}} dowolne argumenty planera, na przykład dotyczące wyboru algorytmu planowania.
 \end{itemize}
-Narzędzia uruchamiane według innego schematu nie będą prawidłowo zintegrowane z~GUI4PDDL. W takim przypadku należy przygotować skrypt powłoki systemu operacyjnego, który dostosuje sposób inicjalizacji procesu planowania do przedstawionego powyżej. Dzięki zastosowaniu funkcji systemowych (roz.~\ref{subsec:przerywanie}) istnieje możliwość kontroli nad tego typu skryptami z poziomu \emph{Eclipse}, włączając uruchamiane przez nie podprocesy.
+Narzędzia uruchamiane według innego schematu nie będą prawidłowo zintegrowane \linebreak z~GUI4PDDL. W takim przypadku należy przygotować skrypt powłoki systemu operacyjnego, który dostosuje sposób inicjalizacji procesu planowania do przedstawionego powyżej. Dzięki zastosowaniu funkcji systemowych (roz.~\ref{subsec:przerywanie}) istnieje możliwość kontroli nad tego typu skryptami z poziomu \emph{Eclipse}, włączając uruchamiane przez nie podprocesy.
 
 Jak wspomniano, planer \emph{FastDownward} w wersji dla systemów z rodziny Linux posiada odpowiedni plik uruchomieniowy w katalogu \path{src} instalacji. W przypadku systemu Windows należy stworzyć osobny program wsadowy. Przykładowa forma takiego pliku znajduje się w katalogu \path{resources} projektu \texttt{pl.poznan.put.cs.gui4pddl}.
 
