[247] chapter 3 back to prev state

--- a/thesis/tex/specification.tex
+++ b/thesis/tex/specification.tex
@@ -6,7 +6,8 @@ Założeniem projektu było utworzenie lekkiego i wydajnego narzędzia do progra
 \subsection{Przypadki użycia}
 \subsubsection{Wspomaganie użytkownika w pracy z edytorem}
 \label{UCeditor}
-\begin{table}[!htb]
+\begin{table}[H]
+\centering
 \begin{tabular}{|p{\textwidth}|}
 \hline 
 \textbf{Przypadek użycia:} Wspomaganie użytkownika w pracy z edytorem\\
@@ -43,7 +44,8 @@ Założeniem projektu było utworzenie lekkiego i wydajnego narzędzia do progra
 \end{table}
 \subsubsection{Podpowiadanie składni}
 \label{reqAutocompletion}
-\begin{table}[!htb]
+\begin{table}[H]
+\centering
 \begin{tabular}{|p{\textwidth}|}
 \hline 
 \textbf{Przypadek użycia:} Podpowiadanie składni\\
@@ -76,7 +78,8 @@ Założeniem projektu było utworzenie lekkiego i wydajnego narzędzia do progra
 \end{table}
 \subsubsection{Tworzenie nowego pliku PDDL}
 \label{reqAutocompletion}
-\begin{table}[!htb]
+\begin{table}[H]
+\centering
 \begin{tabular}{|p{\textwidth}|}
 \hline 
 \textbf{Przypadek użycia:} Tworzenie nowego pliku PDDL\\
@@ -107,7 +110,8 @@ Założeniem projektu było utworzenie lekkiego i wydajnego narzędzia do progra
 \end{table}
 \subsubsection{Instalacja aplikacji przez repozytorium}
 \label{reqAutocompletion}
-\begin{table}[!htb]
+\begin{table}[H]
+\centering
 \begin{tabular}{|p{\textwidth}|}
 \hline 
 \textbf{Przypadek użycia:} Instalacja aplikacji przez repozytorium\\
